--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcf-router",
-  "version": "0.0.8",
+  "version": "0.0.10",
   "description": "provide a express-like tencent cloudbase function router and a local simulator",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
@@ -13,6 +13,9 @@
     "build": "tsc",
     "dev": "ts-node client/server.ts ./demo",
     "format": "prettier --config .prettierrc.json --write \"{src,client,test}/**/*.{j,t}s\""
+  },
+  "repository": {
+    "github": "https://github.com/TinkCai/tcf-router"
   },
   "keywords": [
     "cloudbase",
@@ -31,6 +34,7 @@
   },
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.2",
+    "@cloudbase/manager-node": "^4.0.1",
     "@types/cookie": "^0.5.1",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
@@ -44,9 +48,11 @@
     "jsonwebtoken": "^8.5.1",
     "path-to-regexp": "^6.2.1",
     "prettier": "2.3.2",
+    "rimraf": "^3.0.2",
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "zip-local": "^0.3.5"
   },
   "engines": {
     "node": ">=14.0.0"
