--- a/client/template/package.json
+++ b/client/template/package.json
@@ -5,16 +5,18 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tcf dev"
+    "dev": "tcf dev",
+    "deploy": "tcf deploy"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "ts-node": "^10.8.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "@cloudbase/manager-node": "^4.1.0"
   },
   "dependencies": {
-    "tcf-router": "^0.0.1"
+    "tcf-router": "latest"
   }
 }
