--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcf-router",
-  "version": "0.0.18",
+  "version": "0.0.19",
   "description": "provide a express-like tencent cloudbase function router and a local simulator",
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
@@ -11,7 +11,7 @@
     "prepublishOnly": "npm run build",
     "test": "jest --coverage",
     "build": "tsc",
-    "dev": "ts-node client/server.ts ./demo/ts-project",
+    "dev": "cd demo/ts-project && tcf dev",
     "format": "prettier --config .prettierrc.json --write \"{src,client,test}/**/*.{j,t}s\""
   },
   "repository": {
@@ -34,18 +34,18 @@
   },
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.2",
-    "@cloudbase/manager-node": "^4.1.0",
+    "@cloudbase/manager-node": "^4.2.0",
     "@types/cookie": "^0.5.1",
     "@types/ejs": "^3.1.1",
     "@types/express": "^4.17.13",
-    "@types/jsonwebtoken": "^8.5.8",
+    "@types/jsonwebtoken": "^9.0.1",
     "body-parser": "^1.20.0",
     "commander": "^9.3.0",
     "cookie": "^0.5.0",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "inquirer": "^9.0.0",
-    "jsonwebtoken": "^8.5.1",
+    "jsonwebtoken": "^9.0.0",
     "path-to-regexp": "^6.2.1",
     "prettier": "2.3.2",
     "rimraf": "^3.0.2",
