--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcf-router",
-  "version": "0.0.21",
+  "version": "0.0.22-beta7",
   "description": "provide a express-like tencent cloudbase function router and a local simulator",
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
@@ -29,29 +29,28 @@
   "license": "ISC",
   "devDependencies": {
     "@cloudbase/types": "^2.0.0-alpha.2",
-    "@types/express-serve-static-core": "^4.17.29",
-    "@types/node": "^18.0.0"
+    "@types/express-serve-static-core": "^4.17.33",
+    "@types/node": "^18.13.0"
   },
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.2",
     "@cloudbase/manager-node": "^4.2.0",
     "@types/cookie": "^0.5.1",
     "@types/ejs": "^3.1.1",
-    "@types/express": "^4.17.13",
+    "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
     "body-parser": "^1.20.0",
-    "commander": "^9.3.0",
+    "commander": "^10.0.0",
     "cookie": "^0.5.0",
     "ejs": "^3.1.8",
-    "express": "^4.18.1",
-    "inquirer": "^9.0.0",
+    "express": "^4.18.2",
+    "inquirer": "^9.1.4",
     "jsonwebtoken": "^9.0.0",
     "path-to-regexp": "^6.2.1",
-    "prettier": "2.3.2",
-    "rimraf": "^3.0.2",
-    "ts-node": "^10.8.1",
+    "prettier": "2.8.4",
+    "ts-node": "^10.9.1",
     "tslib": "^2.4.0",
-    "typescript": "^4.7.4",
+    "typescript": "^4.9.5",
     "zip-local": "^0.3.5"
   },
   "engines": {
