--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcf-router",
-  "version": "0.0.22-beta7",
+  "version": "0.0.24",
   "description": "provide a express-like tencent cloudbase function router and a local simulator",
   "main": "./dist/index.js",
   "types": "./types/index.d.ts",
@@ -29,28 +29,28 @@
   "license": "ISC",
   "devDependencies": {
     "@cloudbase/types": "^2.0.0-alpha.2",
-    "@types/express-serve-static-core": "^4.17.33",
-    "@types/node": "^18.13.0"
+    "@types/express-serve-static-core": "^4.17.35",
+    "@types/node": "^20.3.1"
   },
   "dependencies": {
     "@cloudbase/js-sdk": "^1.7.2",
     "@cloudbase/manager-node": "^4.2.0",
     "@types/cookie": "^0.5.1",
-    "@types/ejs": "^3.1.1",
+    "@types/ejs": "^3.1.2",
     "@types/express": "^4.17.17",
-    "@types/jsonwebtoken": "^9.0.1",
-    "body-parser": "^1.20.0",
-    "commander": "^10.0.0",
+    "@types/jsonwebtoken": "^9.0.2",
+    "body-parser": "^1.20.2",
+    "commander": "^10.0.1",
     "cookie": "^0.5.0",
-    "ejs": "^3.1.8",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
-    "inquirer": "^9.1.4",
+    "inquirer": "^9.2.7",
     "jsonwebtoken": "^9.0.0",
     "path-to-regexp": "^6.2.1",
-    "prettier": "2.8.4",
+    "prettier": "2.8.8",
     "ts-node": "^10.9.1",
-    "tslib": "^2.4.0",
-    "typescript": "^4.9.5",
+    "tslib": "^2.5.3",
+    "typescript": "^5.1.3",
     "zip-local": "^0.3.5"
   },
   "engines": {
